tests/ui/auto-traits/bad-generics-on-dyn.stderr
error[E0567]: auto traits cannot have generic parameters
  --> $DIR/bad-generics-on-dyn.rs:4:13
   |
LL | trait Trait1<'a> {}
   |       ------^^^^ help: remove the parameters
   |       |
   |       auto trait cannot have generic parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0567`.
